# opensearch-agent

./: .env.example  .gitignore  README.md  agent.py  agent_chainlit.py  docker-compose.yml  fake_data.py  open_search_config.py  pyproject.toml
tools/: index_data_tool.py  index_details_tool.py  index_search_tool.py  list_indices_tool.py  plot_data_tool.py
